--- a/index.html
+++ b/index.html
@@ -1,12 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/global.css">
+  <title>Inicio - Macetitas</title>
 </head>
 <body>
-    
+  <!-- Top Menu -->
+  <nav class="navbar navbar-light bg-light text-center py-0">
+    <div class="container-fluid justify-content-center topBarImg flex-column">
+      <img src="img/logo.png" class="img-fluid logoImg" alt="">
+    </div>
+    <div class="container-fluid justify-content-center navbar-expand-sm topBarMenu">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#openTopMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="ico/filter.svg" alt="" width="35px" height="35px" style="filter: invert();">
+      </button>
+      <div class="collapse navbar-collapse justify-content-center mb-2 mb-sm-0" id="openTopMenu">
+        <ol class="navbar-nav mb-lg-0">
+          <li class="nav-item me-sm-4">
+            <a class="nav-link active text-white" href="index.html">PÁGINA PRINCIPAL</a>
+          </li>
+          <li class="nav-item me-sm-4">
+            <a class="nav-link text-white text-opacity-75" href="#">QUIENES SOMOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white text-opacity-75" href="#">GALERÍA DE FOTOS</a>
+          </li>
+        </ol>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Mid Body -->
+
+  <!-- Carrusell -->
+  <div id="carouselExampleCaptions" class="carousel slide carousel-fade m-auto" data-bs-ride="carousel">
+    <div class="carousel-inner bg-black mb-5">
+      <div class="carousel-item active carouselItem">
+        <img src="img/carousel/slide1.jpg" class="d-block carouselImg">
+        <div class="carousel-caption d-flex flex-column carouselText">
+          <h1 class="pb-sm-2">C A L I D A D</h1>
+          <p class="mx-2 d-block">
+            Plantas cuidadas con amor y maceteros hechos con los mejores materiales
+          </p>
+        </div>
+      </div>
+      <div class="carousel-item carouselItem">
+        <img src="img/carousel/slide2.jpg" class="d-block carouselImg">
+        <div class="carousel-caption d-flex flex-column carouselText">
+          <h1 class="pb-sm-2">V A R I E D A D</h1>
+          <p class="mx-2 d-block">
+            Multiples maceteros y plantas para cada gusto y lugar de tu hogar
+            <br>
+          </p>
+        </div>
+      </div>
+      <div class="carousel-item carouselItem">
+        <img src="img/carousel/slide3.jpg" class="d-block carouselImg">
+        <div class="carousel-caption d-flex flex-column carouselText">
+          <h1 class="pb-sm-2">GRANITO DE ARENA</h1>
+          <p class="mx-2 d-block">Cuando cuidadas una planta, te cuidas a ti y al planeta</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
