--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/global.css">
   <title>Inicio - Macetitas</title>
@@ -77,6 +78,78 @@
     </button>
   </div>
 
+  <div class="text-center m-5 mt-2 fs-6 mx-auto parrafoText">
+    <h2>¿Has pensado en comprar y tener una planta?</h2>
+    <br>
+    <div class="container">
+      <p>
+        Te invitamos a nuestra tienda virtual donde podrás encontrar una gran variedad de plantas, así como silvestres, exóticas o simplemente para decorar tu hogar. 
+        <br>Atrevete a mostrar tu amor por lo verde y tambien así ayudar a el planeta con tu granito de arena.  
+      </p>
+    </div>
+    <img src="img/img_Index_Plants_Text.png" class="img-fluid">
+  </div>
+
+  <div class="text-center my-5 fs-6 mx-auto parrafoText">
+    <h2>Y si ya tienes alguna planta...¡no te olvides de las macetas!</h2>
+    <br>
+    <div class="container">
+      <p>
+        Tenemos una gran variedad de maceteros, de buena calidad y de diversos materiales, diseños y tamaños, para así darle estilo a tu hogar y tu planta. 
+      </p>
+    </div>
+    <img src="img/img_Index_Macetero_Text.png" class="img-fluid">
+  </div>
+
+  <!-- Footer -->
+<footer class="container-fluid  text-white py-5">
+    <div class="container-lg py-3">
+      <div class="row justify-content-center">
+        <div class=" col-sm-3 text-center ">
+          <ul>
+            <h5 class="mb-3">Integrantes</h5>
+            <li>Jorge Parra</li>
+            <li>Osvaldo Venegas</li>
+            <li>Eduardo Navarro</li>
+            <li>Francisco Galdames</li>
+          </ul>
+        </div>
+
+        <div class=" col-sm-3 text-center">
+            <ul>
+              <h5 class="mb-3">Mapa del Sitio</h5> 
+              <li><a class="text-decoration-none" href="index.html">Página Principal</a :hover></li>
+              <li><a class="text-decoration-none" href="quienes_somos.html">Quiénes Somos</a></li>
+              <li><a class="text-decoration-none" href="galeria.html">Galería de Fotos</a></li>
+            </ul>
+        </div>
+
+        <div class=" col-sm-3 text-center">
+            <ul>
+              <h5 class="mb-3">Contáctanos</h5> 
+              <li>+56 9 1234 5678</li>
+              <li>contacto@macetitas.cl</li>
+                <div class="mt-3">
+                  <a class="text-decoration-none me-2" href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://es-la.facebook.com/"><i class="bi bi-facebook h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://twitter.com/?lang=es"><i class="bi bi-twitter h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://github.com/Nanito111/Experiencia1_ParraVenegasNavarroGaldames_006d"><i class="bi bi-github h4"></i></a>
+                </div>
+              </li>
+            </ul>
+        </div>
+
+        <div class="text-center">
+          <ul>
+            <li><img src="img/logo.png" class="footerImg"></li>
+            <li>©2022</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
