--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -12,6 +12,30 @@
   <title>Quienes Somos - Macetitas</title>
 </head>
 <body>
+  <!-- Top Menu -->
+  <nav class="navbar navbar-light bg-light text-center py-0">
+    <div class="container-fluid justify-content-center topBarImg flex-column">
+      <img src="img/logo.png" class="img-fluid logoImg" alt="">
+    </div>
+    <div class="container-fluid justify-content-center navbar-expand-sm topBarMenu">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#openTopMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <img src="ico/filter.svg" alt="" width="35px" height="35px" style="filter: invert();">
+      </button>
+      <div class="collapse navbar-collapse justify-content-center mb-2 mb-sm-0" id="openTopMenu">
+        <ol class="navbar-nav mb-lg-0">
+          <li class="nav-item me-sm-4">
+            <a class="nav-link active text-white" href="index.html">PÁGINA PRINCIPAL</a>
+          </li>
+          <li class="nav-item me-sm-4">
+            <a class="nav-link text-white text-opacity-75" href="#">QUIENES SOMOS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white text-opacity-75" href="#">GALERÍA DE FOTOS</a>
+          </li>
+        </ol>
+      </div>
+    </div>
+  </nav>
 
   <!-- Mid Body -->
   <div class="container-fluid py-5 text-white bg-dark">
@@ -73,6 +97,55 @@
   </div>
 </div>
 
+  <!-- Footer -->
+  <footer class="container-fluid  text-white py-5">
+    <div class="container-lg py-3">
+      <div class="row justify-content-center">
+        <div class=" col-sm-3 text-center ">
+          <ul>
+            <h5 class="mb-3">Integrantes</h5>
+            <li>Jorge Parra</li>
+            <li>Osvaldo Venegas</li>
+            <li>Eduardo Navarro</li>
+            <li>Francisco Galdames</li>
+          </ul>
+        </div>
+
+        <div class=" col-sm-3 text-center">
+            <ul>
+              <h5 class="mb-3">Mapa del Sitio</h5> 
+              <li><a class="text-decoration-none" href="index.html">Página Principal</a :hover></li>
+              <li><a class="text-decoration-none" href="quienes_somos.html">Quiénes Somos</a></li>
+              <li><a class="text-decoration-none" href="galeria.html">Galería de Fotos</a></li>
+            </ul>
+        </div>
+
+        <div class=" col-sm-3 text-center">
+            <ul>
+              <h5 class="mb-3">Contáctanos</h5> 
+              <li>+56 9 1234 5678</li>
+              <li>contacto@macetitas.cl</li>
+                <div class="mt-3">
+                  <a class="text-decoration-none me-2" href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://es-la.facebook.com/"><i class="bi bi-facebook h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://twitter.com/?lang=es"><i class="bi bi-twitter h4"></i></a>
+                  <a class="text-decoration-none me-2" href="https://github.com/Nanito111/Experiencia1_ParraVenegasNavarroGaldames_006d"><i class="bi bi-github h4"></i></a>
+                </div>
+              </li>
+            </ul>
+        </div>
+
+        <div class="text-center">
+          <ul>
+            <li><img src="img/logo.png" class="footerImg"></li>
+            <li>©2022</li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
