--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <a class="nav-link active text-white" href="index.html">PÁGINA PRINCIPAL</a>
           </li>
           <li class="nav-item me-sm-4">
-            <a class="nav-link text-white text-opacity-75" href="#">QUIENES SOMOS</a>
+            <a class="nav-link text-white text-opacity-75" href="quienes_somos.html">QUIENES SOMOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white text-opacity-75" href="#">GALERÍA DE FOTOS</a>
+            <a class="nav-link text-white text-opacity-75" href="galeria.html">GALERÍA DE FOTOS</a>
           </li>
         </ol>
       </div>
