--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -24,13 +24,13 @@
       <div class="collapse navbar-collapse justify-content-center mb-2 mb-sm-0" id="openTopMenu">
         <ol class="navbar-nav mb-lg-0">
           <li class="nav-item me-sm-4">
-            <a class="nav-link active text-white" href="index.html">PÁGINA PRINCIPAL</a>
+            <a class="nav-link text-white text-opacity-75" href="index.html">PÁGINA PRINCIPAL</a>
           </li>
           <li class="nav-item me-sm-4">
-            <a class="nav-link text-white text-opacity-75" href="#">QUIENES SOMOS</a>
+            <a class="nav-link active text-white " href="quienes_somos.html">QUIENES SOMOS</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white text-opacity-75" href="#">GALERÍA DE FOTOS</a>
+            <a class="nav-link text-white text-opacity-75" href="galeria.html">GALERÍA DE FOTOS</a>
           </li>
         </ol>
       </div>
@@ -38,7 +38,7 @@
   </nav>
 
   <!-- Mid Body -->
-  <div class="container-fluid py-5 text-white bg-dark">
+  <div class="container-fluid py-5 text-white "style="background-color: #070707;">
     <div class="container-md p-lg-4 text-center d-flex justify-content-center">      
       <div style="max-width: 750px">
         <p class="text-muted sub-heading mb-2">QUIENES SOMOS</p>
@@ -92,7 +92,7 @@
       <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
       <h3 class="fs-4 my-3 fw-bold">Tener plantas en casa es como tener un ambientador natural</h2>
       <p class="fs-6">El aroma de ciertos tipos de flor puede ser lo suficientemente potente como para percibirse en toda la habitación. Mira el siguiente video para conocer más beneficios de tener plantas:</p>
-      <a href="#" class="btn btn-light text-success" role="button"><i class="bi bi-box-arrow-up-right me-3 text-success"></i>Ver video</a>
+      <a href="https://www.youtube.com/watch?v=dr-ET-uLj1U" class="btn btn-light text-success" role="button"><i class="bi bi-box-arrow-up-right me-3 text-success"></i>Ver video</a>
     </div>
   </div>
 </div>
