--- a/quienes_somos.html
+++ b/quienes_somos.html
@@ -6,148 +6,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/quienes_somos.css">
   <link rel="stylesheet" href="css/global.css">
   <title>Quienes Somos - Macetitas</title>
+  <script src="js/csi.min.js"></script>
 </head>
 <body>
-  <!-- Top Menu -->
-  <nav class="navbar navbar-light bg-light text-center py-0">
-    <div class="container-fluid justify-content-center topBarImg flex-column">
-      <img src="img/logo.png" class="img-fluid logoImg" alt="">
-    </div>
-    <div class="container-fluid justify-content-center navbar-expand-sm topBarMenu">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#openTopMenu" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <img src="ico/filter.svg" alt="" width="35px" height="35px" style="filter: invert();">
-      </button>
-      <div class="collapse navbar-collapse justify-content-center mb-2 mb-sm-0" id="openTopMenu">
-        <ol class="navbar-nav mb-lg-0">
-          <li class="nav-item me-sm-4">
-            <a class="nav-link text-white text-opacity-75" href="index.html">PÁGINA PRINCIPAL</a>
-          </li>
-          <li class="nav-item me-sm-4">
-            <a class="nav-link active text-white " href="quienes_somos.html">QUIENES SOMOS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white text-opacity-75" href="galeria.html">GALERÍA DE FOTOS</a>
-          </li>
-        </ol>
-      </div>
-    </div>
-  </nav>
+  <!-- TOP BAR -->
+  <div data-include="content/topBar.html"></div>
 
   <!-- Mid Body -->
-  <div class="container-fluid py-5 text-white "style="background-color: #070707;">
-    <div class="container-md p-lg-4 text-center d-flex justify-content-center">      
+  <div class="container-fluid py-0 text-white bg-black">
+    <div class="container-md p-2 text-center d-flex justify-content-center">
       <div style="max-width: 750px">
-        <p class="text-muted sub-heading mb-2">QUIENES SOMOS</p>
-        <h1 class="fw-bold fs-2 my-4">Bienvenido a Macetitas</h1>
-        <p class="opacity-75 my-3 fs-6">Somos una comunidad de vendedores de plantas y maceteros que buscan ayudar a las personas a reconectarse con el mundo natural</p>
+        <h1 class="fw-bold fs-3 my-2">¿QUIENES SOMOS?</h1>
+        <p class="opacity-75 my-3 fs-6">Somos una comunidad de vendedores de plantas y maceteros que buscan ayudar a las
+          personas a reconectarse con el mundo natural</p>
       </div>
-    </div>  
- </div>
+    </div>
+  </div>
 
-
- 
- <!-- Nuestra Misión y Visión y Objetivo -->
- <div class="container-fluid py-3 py-lg-5">
-   <div class="py-5">
-      <div class="container-md d-lg-flex text-center text-lg-start align-items-center justify-content-around">
-        <div class="me-md-5 text-block">
-          <p class="text-muted sub-heading mb-2">NUESTRA MISIÓN</p>
+  <!-- Nuestra Misión y Visión y Objetivo -->
+  <div class="parrafoImg mb-0 d-block d-md-flex row-cols-md-2 text-white">
+    <div class=" p-0">
+      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+           style="background-image: url(img/plants-1.jpg); background-position: center; background-size: cover;">
+        <div class="text-block">
+          <p class="pre-heading mb-2">NUESTRA MISIÓN</p>
           <h2 class="fw-bold fs-3">Ofrecer productos de calidad</h2>
-          <p class="fs-6 mb-5">Nos apasiona ofrecer nuestro productos a la gente para tener un mundo más verde, para asi formar más consciencia sobre el medioambiente.</p>  
+          <p class="fs-6 mb-0">Nos apasiona ofrecer nuestro productos a la gente para tener un mundo más verde, para asi
+            formar más consciencia sobre el medioambiente.</p>
         </div>
-        <img class="img-fluid mx-lg-0 mx-sm-auto mt-sm-5 d-sm-block" style="max-height: 300px" src="img/plants-1.jpg" alt="">
+        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-1.jpg" alt=""> -->
       </div>
-    </div>
-    <div class="py-5">
-      <div class="container-md d-lg-flex flex-md-row-reverse text-center text-lg-start align-items-center justify-content-around">
-        <div class="me-md-5 text-block ms-lg-5">
-          <p class="text-muted sub-heading mb-2">NUESTRA VISIÓN</p>
+      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+           style="background-image: url(img/gardening-tools.jpg); background-position: center; background-size: cover;">
+        <div class="text-block">
+          <p class="pre-heading mb-2">NUESTRA VISIÓN</p>
           <h2 class="fw-bold fs-3">Ser lideres en la venta de productos de jardinería</h2>
-          <p class="fs-6 mb-5">Nuestra visión es la de ser mejores y ofrecer productos innovadores de alta calidad y ser una empresa con conciencia ambientalista y ecológica.</p>  
+          <p class="fs-6 mb-0">Nuestra visión es la de ser mejores y ofrecer productos innovadores de alta calidad y ser
+            una empresa con conciencia ambientalista y ecológica.</p>
         </div>
-        <img class="img-fluid mx-lg-0 mx-sm-auto mt-sm-5 d-sm-block" style="max-height: 300px" src="img/gardening-tools.jpg" alt="">
+        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/gardening-tools.jpg" alt=""> -->
+      </div>
+      <div class="d-lg-flex text-center text-lg-start align-items-center justify-content-around py-3"
+           style="background-image: url(img/plants-2.jpg); background-position: center; background-size: cover;">
+        <div class="text-block">
+          <p class="pre-heading mb-2">NUESTRO OBJETIVO</p>
+          <h2 class="fw-bold fs-3">Formar una sociedad más verde en Chile y el mundo</h2>
+          <p class="fs-6 mb-0">Buscamos construir un futuro donde la gente se pueda reunir para aprender, conectar y tomar
+            acción para preservar nuestro medio ambiente.</p>
+        </div>
+        <!-- <img class="img-fluid mx-lg-0 mx-sm-auto d-sm-block" src="img/plants-2.jpg" alt=""> -->
       </div>
     </div>
-    <div class="py-5">
-      <div class="container-md d-lg-flex text-center text-lg-start align-items-center justify-content-around">
-        <div class="me-md-5 text-block">
-        <p class="text-muted sub-heading mb-2">NUESTRO OBJETIVO</p>
-        <h2 class="fw-bold fs-3">Formar una sociedad más verde en Chile y el mundo</h2>
-        <p class="fs-6 mb-5">Buscamos construir un futuro donde la gente se pueda reunir para aprender, conectar y tomar acción para preservar nuestro medio ambiente.</p>  
+    <div class="p-0" style="background-image: url(img/column.jpg); background-size: cover; background-position: center;">
+      <div class="text-white py-3">
+        <div class="container-fluid text-center justify-content-center">
+          <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
+          <h3 class="fs-4 my-3 fw-bold">Tener plantas en casa es como tener un ambientador natural</h3>
+            <p class="fs-6">El aroma de ciertos tipos de flor puede ser lo suficientemente potente como para percibirse
+              en toda la habitación. Mira el siguiente video para conocer más beneficios de tener plantas:</p>
+            <iframe class="frameVideo mt-md-5" src="https://www.youtube.com/embed/dr-ET-uLj1U" title="YouTube video player"
+              frameborder="0" allow=" autoplay; clipboard-write; encrypted-media;" allowfullscreen></iframe>
         </div>
-        <img class="img-fluid mx-lg-0 mx-sm-auto m mt-sm-5 d-sm-block" style="max-height: 300px" src="img/plants-2.jpg" alt="">
       </div>
     </div>
- </div>
+  </div>
 
 
  <!-- Beneficios -->
- <div class="container-fluid bg-success text-white py-5 mainbar">
-  <div class="container-md p-lg-4 text-center d-flex justify-content-center">      
-    <div class>
-      <p class="opacity-75 sub-heading mb-2">¿SABIAS QUE...?</p>
-      <h3 class="fs-4 my-3 fw-bold">Tener plantas en casa es como tener un ambientador natural</h2>
-      <p class="fs-6">El aroma de ciertos tipos de flor puede ser lo suficientemente potente como para percibirse en toda la habitación. Mira el siguiente video para conocer más beneficios de tener plantas:</p>
-      <a href="https://www.youtube.com/watch?v=dr-ET-uLj1U" class="btn btn-light text-success" role="button"><i class="bi bi-box-arrow-up-right me-3 text-success"></i>Ver video</a>
-    </div>
-  </div>
-</div>
-
-  <!-- Footer -->
-  <footer class="container-fluid  text-white py-5">
-    <div class="container-lg py-3">
-      <div class="row justify-content-center">
-        <div class=" col-sm-3 text-center ">
-          <ul>
-            <h5 class="mb-3">Integrantes</h5>
-            <li>Jorge Parra</li>
-            <li>Osvaldo Venegas</li>
-            <li>Eduardo Navarro</li>
-            <li>Francisco Galdames</li>
-          </ul>
-        </div>
-
-        <div class=" col-sm-3 text-center">
-            <ul>
-              <h5 class="mb-3">Mapa del Sitio</h5> 
-              <li><a class="text-decoration-none" href="index.html">Página Principal</a :hover></li>
-              <li><a class="text-decoration-none" href="quienes_somos.html">Quiénes Somos</a></li>
-              <li><a class="text-decoration-none" href="galeria.html">Galería de Fotos</a></li>
-            </ul>
-        </div>
-
-        <div class=" col-sm-3 text-center">
-            <ul>
-              <h5 class="mb-3">Contáctanos</h5> 
-              <li>+56 9 1234 5678</li>
-              <li>contacto@macetitas.cl</li>
-                <div class="mt-3">
-                  <a class="text-decoration-none me-2" href="https://www.instagram.com/?hl=es"><i class="bi bi-instagram h4"></i></a>
-                  <a class="text-decoration-none me-2" href="https://es-la.facebook.com/"><i class="bi bi-facebook h4"></i></a>
-                  <a class="text-decoration-none me-2" href="https://twitter.com/?lang=es"><i class="bi bi-twitter h4"></i></a>
-                  <a class="text-decoration-none me-2" href="https://github.com/Nanito111/Experiencia1_ParraVenegasNavarroGaldames_006d"><i class="bi bi-github h4"></i></a>
-                </div>
-              </li>
-            </ul>
-        </div>
-
-        <div class="text-center">
-          <ul>
-            <li><img src="img/logo.png" class="footerImg"></li>
-            <li>©2022</li>
-            <li></li>
-            <li></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </footer>
  
 
+  <!-- FOOTER -->
+  <div data-include="content/footer.html"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
