--- a/content/footer.html
+++ b/content/footer.html
@@ -14,9 +14,11 @@
         <div class=" col-sm-3 text-center">
             <ul>
               <h5 class="mb-3">Mapa del Sitio</h5> 
-              <li><a class="text-decoration-none" href="../index.html">Página Principal</a></li>
-              <li><a class="text-decoration-none" href="../quienes_somos.html">Quiénes Somos</a></li>
-              <li><a class="text-decoration-none" href="../galeria.html">Galería de Fotos</a></li>
+              <li><a class="text-decoration-none" href="index.html">Página Principal</a></li>
+              <li><a class="text-decoration-none" href="quienes_somos.html">Quiénes Somos</a></li>
+              <li><a class="text-decoration-none" href="galeria.html">Galería de Fotos</a></li>
+              <li><a class="text-decoration-none" href="contacto.html">Contacto</a></li>
+              <li><a class="text-decoration-none" href="feedback.html">Soporte</a></li>
             </ul>
         </div>
 
