--- a/contacto.html
+++ b/contacto.html
@@ -111,22 +111,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 
-       <script>
-        $(window).on('load', function() {
-    var inputs = document.getElementsByClassName('form-control'); 
-    var validation = Array.prototype.filter.call(inputs, function(input) {
-      $(input).blur(function() {
-        input.classList.remove('is-invalid')
-        input.classList.remove('is-valid')
-
-        if (input.checkValidity() == false || input.value.trim() == "") {
-          input.classList.add('is-invalid');
-        } else {
-          input.classList.add('is-valid')
-        }
-      });
-    });
-});
-              </script>
+  <script src="js/form_validator.js"></script>
      </body>
      </html>
